# vibeline

./: README.md  example_pipelines.py  example_triggers.py  pyproject.toml  requirements.md
pipeline_framework/: __init__.py  cli.py  core.py  decorators.py  engine.py  errors.py  logging_config.py  models.py  monitor.py  pipeline_registry.py
pipeline_framework/triggers/: __init__.py  base.py  cron.py  file.py  registry.py  webhook.py
tests/: __init__.py  test_core.py  test_decorators.py  test_engine.py
tests/triggers/: __init__.py  test_cron_trigger.py
